Add SSL functionality HTTP Functionality complete

--- a/src/IdentityServerDemo/appsettings.json
+++ b/src/IdentityServerDemo/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
 
   "ConnectionStrings": {
-    "IdentityServer4": "server=localhost;port=3308;user=root;pwd=demo;database=identity_server_4"
+    "IdentityServer4": "server=172.16.1.2;port=3306;user=root;pwd=demo;database=identity_server_4"
   },
   "Logging": {
     "LogLevel": {
