--- a/src/nginx/nginx.conf
+++ b/src/nginx/nginx.conf
@@ -18,30 +18,6 @@ http {
     server {
         listen 80;
         server_name identityserver.local;
-        location / {
-            proxy_pass http://identityserver/.well-known/openid-configuration;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection keep-alive;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-            proxy_redirect off;
-        }
-        location /discover {
-            proxy_pass http://identityserver/.well-known/openid-configuration;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection keep-alive;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-            proxy_redirect off;
-        }
         location /.well-known/openid-configuration {
             proxy_pass http://identityserver/.well-known/openid-configuration;
             proxy_http_version 1.1;
@@ -54,8 +30,9 @@ http {
             proxy_cache_bypass $http_upgrade;
             proxy_redirect off;
         }
-        location /connect/token{
-            proxy_pass http://identityserver/connect/token;
+        
+        location ~ ^/connect/(token|authorize|introspect|revocation|checksession|endsession) {
+            proxy_pass http://identityserver$request_uri;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection keep-alive;
@@ -65,74 +42,9 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
             proxy_redirect off;
-        }
-        location /connect/authorize{
-            proxy_pass http://identityserver/connect/authorize;
-            proxy_redirect off;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection keep-alive;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header   X-Forwarded-Host $server_name;
-        }
-        location /connect/introspect{
-            proxy_pass http://identityserver/connect/introspect;
-            proxy_redirect off;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection keep-alive;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header   X-Forwarded-Host $server_name;
         }
         location /.well-known/openid-configuration/jwks{
             proxy_pass http://identityserver/.well-known/openid-configuration/jwks;
-            proxy_redirect off;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection keep-alive;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header   X-Forwarded-Host $server_name;
-        }
-        location /connect/revocation{
-            proxy_pass http://identityserver/connect/revocation;
-            proxy_redirect off;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection keep-alive;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header   X-Forwarded-Host $server_name;
-        }
-        location /connect/checksession{
-            proxy_pass http://identityserver/connect/checksession;
-            proxy_redirect off;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection keep-alive;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header   X-Forwarded-Host $server_name;
-        }
-        location /connect/endsession{
-            proxy_pass http://identityserver/connect/endsession;
             proxy_redirect off;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -174,6 +86,4 @@ http {
             proxy_redirect off;
         }
     }
- 
-    
 }
